# TwitchChannelPointsManager

./: .breakpoints  .gitignore  biuld.py  create_list.py  create_reward.py  data.json  data_canceled.json  data_canceled_2.json  data_canceled_3.json  edit_reward.py  func.py  get_bearer.py  get_prediction.py  ids.txt  keep_alive.py  log.txt  log_.txt  main.py  main1.py  main_2.py  prediction_13.json  prediction_13.txt  prediction_outcomes_13.json  pyproject.toml  requirements.txt  reward.json  set_environ.py  test.py  test_2.py  z.json  z_3.json  z_r.json
backup/: v1.py  v2.py
old/: spin_07_07_2022.txt  spin_08_07_2022.txt  spin_09_07_2022.txt  spin_10_07_2022.txt  spin_11_07_2022.txt  spin_12_07_2022.txt  spin_13_07_2022.txt  spin_14_07_2022.txt  spin_15_07_2022.txt  spin_16_07_2022.txt  spin_17_07_2022.txt  spin_18_07_2022.json  spin_18_07_2022.txt
static/: styles.css
static2/: spin_02_08_2022.json  spin_02_08_2022.txt  spin_03_08_2022.json  spin_03_08_2022.txt  spin_04_08_2022.json  spin_04_08_2022.txt  spin_05_08_2022.json  spin_05_08_2022.txt  spin_06_08_2022.json  spin_06_08_2022.txt  spin_07_08_2022.json  spin_07_08_2022.txt  spin_08_08_2022.json  spin_08_08_2022.txt  spin_09_08_2022.json  spin_09_08_2022.txt  spin_10_08_2022.json  spin_10_08_2022.txt  spin_11_08_2022.json  spin_11_08_2022.txt  spin_12_08_2022.json  spin_12_08_2022.txt  spin_13_08_2022.json  spin_13_08_2022.txt  spin_19_07_2022.json  spin_19_07_2022.txt  spin_20_07_2022.json  spin_20_07_2022.txt  spin_21_07_2022.json  spin_21_07_2022.txt  spin_22_07_2022.json  spin_22_07_2022.txt  (+19 more)
(+32 files in other folders)
