[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
hypercorn = "^0.13.2"
nest-asyncio = "^1.5.5"
quart = "^0.17.0"
requests = "^2.28.1"
twitchio = "^2.3.0"
config = "^0.5.1"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"